--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -196,6 +196,10 @@
                         showHideSubHeadControls($(this));
                     });
 
+                    $(".imgSubHeadClose").click(function (e) {
+                        showHideSubHeadControls($(this));
+                    });
+
                     $(".imgSubHeadSave").click(function (e) {
                         var txtControl = null;
                         var chkControl = null;
