--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ITReturnDetails.cshtml
@@ -370,7 +370,13 @@
 
                     $('.expand').click(function () {
                         $(this).find('.expandCollapse').text($(this).find('.expandCollapse').text() == "+" ? "-" : "+");
-                        $(this).nextUntil("tr.collapse").slideToggle(10);
+                        $(this).nextAll().each(function () {
+                            if ($(this).hasClass("collapse")) {
+                                $(this).slideToggle(10);
+                                return false; 
+                            }
+                            $(this).slideToggle(10);
+                        });
                     });
                     $('.expand').each(function () {
                         $(this).nextUntil("tr.collapse").slideToggle(10);
