Added rows to computation sheet Fixed the style issue on the form

--- a/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
+++ b/LitigationSoftware/LSWebApp/Views/TaxReturn/ExistingSectionWiseDetails.cshtml
@@ -36,14 +36,14 @@
             <td>Filling Date</td>
             @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
             {
-                <td>@itsectiondetail.ITReturnFillingDate.Value.ToString("dd MMM yyyy")</td>
+                <td>@itsectiondetail.ITReturnFillingDate.Value.ToString("dd-MMM-yyyy")</td>
             }
         </tr>
         <tr class="table-active">
             <td>Due Date</td>
             @foreach (var itsectiondetail in Model.ITReturnDetailsListObject)
             {
-                <td>@itsectiondetail.ITReturnDueDate.Value.ToString("dd MMM yyyy")</td>
+                <td>@itsectiondetail.ITReturnDueDate.Value.ToString("dd-MMM-yyyy")</td>
             }
         </tr>
 
@@ -52,7 +52,8 @@
             @Html.Partial("ITReturnDetailsListItem"
             , new ITReturnDetailsListItemModel(Model.ITHeadMasterList[itemWithAmount]
             , Model.ITReturnDetailsListObject
-            , Model.ITHeadMasterList))
+            , Model.ITHeadMasterList
+            , Model.BusinessLossDetailsList))
         }        
     </tbody>
 </table>
